--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: vdr
 Section: misc
 Priority: extra
 Maintainer: Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>
-Uploaders: Thomas Schmidt <tschmidt@debian.org>, Andreas Mueller <amu@tr.debian.net> 
+Uploaders: Thomas Schmidt <tschmidt@debian.org> 
 Build-Depends: debhelper (>= 4.1.16), dvb-dev (>= 1.0.0) | linux-kernel-headers (>=2.5.999-test7-bk-6), libjpeg62-dev, dpatch (>= 2.0.9), libcap-dev
 Standards-Version: 3.6.1
 
