--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Description: Video Disk Recorder for DVB cards
  Video Disk Recorder (VDR) is a digital sat-receiver program using
  Linux and DVB technologies. It allows one to record MPEG2 streams,
  as well as output the stream to TV. It is also possible to watch DVDs
- (hardware accelerated) with some comfort and use a IR remote control.
+ (hardware accelerated) with some comfort and use an IR remote control.
  .
  This package contains files shared by different VDR versions and
  frontends.
@@ -33,7 +33,7 @@ Description: Video Disk Recorder for DVB cards
  Video Disk Recorder (VDR) is a digital sat-receiver program using
  Linux and DVB technologies. It allows one to record MPEG2 streams,
  as well as output the stream to TV. It is also possible to watch DVDs
- (hardware accelerated) with some comfort and use a IR remote control.
+ (hardware accelerated) with some comfort and use an IR remote control.
  .
  This package contains the header files of VDR.
  You need this package to be able to build vdr-plugins!
