vdr: Changes suggested by Thomas G&#xC3;&#x152;nther &lt;tom@toms-cafe.de&gt;       + debian/watch: Updated to show the newest developer versions       + Install PLUGINS.html in vdr-dev only       + Install libsi header files in package vdr-dev       + Added XB-VDR-Patchlevel-field in debian/control to vdr-dev too       + Changed a few typos in README.Debian       + Added commands.update-recordings.conf from vdrdevel to have a         command for updating the recordings list manually       + Added "Blue LCARS" and "Cool" themes from vdrdevel
SVN: trunk@461

--- a/debian/control
+++ b/debian/control
@@ -38,6 +38,7 @@ Description: Video Disk Recorder for DVB cards
  .
  This package contains the header files of VDR.
  You need this package to be able to build vdr-plugins!
+XB-VDR-Patchlevel: ${patchlevel}
 
 Package: vdr-plugin-sky
 Architecture: any 
