--- a/debian/plugin-template/rules
+++ b/debian/plugin-template/rules
@@ -45,7 +45,7 @@ clean-patched:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp configure-stamp
-	$(MAKE) -o .dependencies clean
+	-$(MAKE) -o .dependencies clean
 	rm -f libvdr-*.so.*
 	dh_clean
 
