Made debian/plugin-template/control and debian/plugin-template/rules compatible with dependencies.sh and new patchlevel.sh SVN: trunk@1141

--- a/debian/plugin-template/rules
+++ b/debian/plugin-template/rules
@@ -87,6 +87,7 @@ binary-arch: build install
 #	dh_perl
 	dh_shlibdeps
 	/usr/lib/$(VDR)-dev/patchlevel.sh subst
+	/usr/lib/$(VDR)-dev/dependencies.sh
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
