--- a/debian/plugin-template/control
+++ b/debian/plugin-template/control
@@ -7,7 +7,8 @@ Standards-Version: #POLICY#
 
 Package: vdr-plugin-#PACKAGE#
 Architecture: any
-Depends: ${shlibs:Depends}, vdr (>= #VDRVERSION#)
+Depends: ${shlibs:Depends}, ${vdr:Depends}
+Conflicts: ${vdr:Conflicts}
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
-XB-VDR-Patchlevel: ${patchlevel}
+XB-VDR-Patchlevel: ${vdr:Patchlevel}
