--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: extra
 Maintainer: Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>
 Uploaders: Thomas Schmidt <tschmidt@debian.org> 
-Build-Depends: debhelper (>= 4.1.16), dvb-dev (>= 1.0.0) | linux-kernel-headers (>=2.5.999-test7-bk-6), libjpeg62-dev, dpatch (>= 2.0.9), libcap-dev
+Build-Depends: debhelper (>= 4.1.16), dvb-dev (>= 1.0.0) | linux-kernel-headers (>=2.5.999-test7-bk-6), libjpeg62-dev, dpatch (>= 2.0.9), libcap-dev, libncurses5-dev
 Standards-Version: 3.6.2
 
 Package: vdr
@@ -64,8 +64,8 @@ Description: Plugins for vdr to show some possible features
  Linux and DVB technologies. It allows one to record MPEG2 streams,
  as well as output the stream to TV.
  .
- This package contains the example-plugins hello, osddemo and status
- from the vdr-source. These plugins do not have useful features,
- they only demonstrate how vdr-plugins work and what is possible to
- do with them.
+ This package contains the example-plugins hello, osddemo, svccli, 
+ svcsvr, skincurses, status and svdrpdemo from the vdr-source. 
+ These plugins do not have useful features, they only demonstrate 
+ how vdr-plugins work and what is possible to do with them.
 XB-VDR-Patchlevel: ${vdr:Patchlevel}
