--- a/debian/rules
+++ b/debian/rules
@@ -102,7 +102,7 @@ binary-indep: build install
 #	dh_installmime -i
 #	dh_installinit -i
 #	dh_installcron -i
-#	dh_installman -i
+	dh_installman -i
 #	dh_installinfo -i
 #	dh_undocumented -i
 	dh_installchangelogs -i HISTORY
