* Removed linux-kernel-headers build-dependancy, not needed anymore * Removed vdr-dev dependancy on dvb-dev | linux-kernel-headers   (Ubuntu Bug #65340) SVN: trunk@3700

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: extra
 Maintainer: Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>
 Uploaders: Thomas Schmidt <tschmidt@debian.org>, Tobias Grimm <tg@e-tobi.net>, Thomas Günther <tom@toms-cafe.de>
-Build-Depends: debhelper (>= 4.1.16), linux-kernel-headers (>=2.5.999-test7-bk-6), libjpeg62-dev, dpatch (>= 2.0.9), libcap-dev, libncurses5-dev
+Build-Depends: debhelper (>= 4.1.16), libjpeg62-dev, dpatch (>= 2.0.9), libcap-dev, libncurses5-dev
 Standards-Version: 3.7.2
 
 Package: vdr
@@ -30,7 +30,7 @@ XB-VDR-Patchlevel: ${vdr:Patchlevel}
 
 Package: vdr-dev
 Architecture:  all
-Depends: ${misc:Depends}, debhelper, dvb-dev (>= 1.0.0) | linux-kernel-headers (>=2.5.999-test7-bk-6)
+Depends: ${misc:Depends}, debhelper
 Suggests: dh-make
 Description: Video Disk Recorder for DVB cards
  Video Disk Recorder (VDR) is a digital sat-receiver program using
