* Added XS-Vcs-Svn and XS-Vcs-Browser fields to debian/control * Removed version from Build-Dependancy to dpatch - even Sarge has the   required version SVN: trunk@4624

--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,10 @@ Section: misc
 Priority: extra
 Maintainer: Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>
 Uploaders: Thomas Schmidt <tschmidt@debian.org>, Tobias Grimm <tg@e-tobi.net>, Thomas Günther <tom@toms-cafe.de>
-Build-Depends: debhelper (>= 4.1.16), libjpeg62-dev, dpatch (>= 2.0.9), libcap-dev, libncurses5-dev
+Build-Depends: debhelper (>= 4.1.16), libjpeg62-dev, dpatch, libcap-dev, libncurses5-dev
 Standards-Version: 3.7.2
+XS-Vcs-Svn: svn://svn.debian.org/pkg-vdr-dvb/vdr/vdr/trunk/
+XS-Vcs-Browser: http://svn.debian.org/wsvn/pkg-vdr-dvb/vdr/vdr/trunk/
 
 Package: vdr
 Architecture: any
