* Modified 81_Make_config.dpatch to set the default CXXFLAGS and CFLAGS   required for building VDR and VDR plugins. This was necessary, because newer   versions of dpkg-buildpackage export CXXFLAGS. Because the upstream's   Makefile of VDR and VDR plugins usually define the compiler arguments   as "CXXFLAGS ?=...", these settings are ignored when an environment variable   CXXFLAGS exists. On non-i386 builds this causes a FTBFS for all plugins,   because of the missing -fPIC. Plugins, that require special compiler   arguments, should from now on pass CXXFLAGS as an arguemtn to the make call   in debian/rules. (closes: #475710) * Added caching to plugin-loader.sh to speed up the initial startup of vdr   (Patch provided by Michael Burian &lt;michael.burian@sbg.at&gt;) SVN: trunk@6743

--- a/debian/rules
+++ b/debian/rules
@@ -44,13 +44,13 @@ build-stamp: configure-stamp
 
 	# build unoptimized vdr with debugging symbols
 	touch po/vdr.pot po/*.po
-	$(MAKE) all $(MAKE_OPTIONS) VDRDEBUG=yes
+	$(MAKE) all $(MAKE_OPTIONS) BUILDVDR=yes VDRDEBUG=yes
 	cp vdr vdr-dbg
 	$(MAKE) -o .dependencies clean $(MAKE_OPTIONS)
 
 	# build "productive" vdr
 	touch po/vdr.pot po/*.po
-	$(MAKE) all $(MAKE_OPTIONS)
+	$(MAKE) all $(MAKE_OPTIONS) BUILDVDR=yes
 	ln -f vdr vdr-kbd
 
 	# plugins
