* Made Make.config handle DEB_BUILD_OPTIONS=noopt, so all plugins including   Make.config in their Makefile will inherently suppport noopt as well   (see also Debian Policy 3.7.3.0 section 10.1) SVN: trunk@6744

--- a/debian/rules
+++ b/debian/rules
@@ -44,7 +44,7 @@ build-stamp: configure-stamp
 
 	# build unoptimized vdr with debugging symbols
 	touch po/vdr.pot po/*.po
-	$(MAKE) all $(MAKE_OPTIONS) BUILDVDR=yes VDRDEBUG=yes
+	$(MAKE) all $(MAKE_OPTIONS) BUILDVDR=yes VDRDEBUG=yes DEB_BUILD_OPTIONS=nostrip,noopt
 	cp vdr vdr-dbg
 	$(MAKE) -o .dependencies clean $(MAKE_OPTIONS)
 
