Applied a lot of spelling fixes (Thanks to Michael Nork!)
SVN: trunk@6795

--- a/debian/commands.custom.conf
+++ b/debian/commands.custom.conf
@@ -1,6 +1,6 @@
 #
 # This is an example file for defining external commands, that will be 
-# accessable via VDR's OSD menu.
+# accessible via VDR's OSD menu.
 # The commands will be executed under the same user id that vdr is running 
 # with, so take care if your are running vdr as root!
 # 
@@ -16,7 +16,7 @@
 # random epigram. ( you may need an "apt-get install fortune" first! )
 #
 # If you are using the reccmd-patch, you can even divide your commands into
-# submenus. To do so, preceed all sub menu items with a "-". i.e.:
+# submenus. To do so, prefix all sub menu items with a "-". i.e.:
 # 
 # Fortune Cookies ... : echo "sub menu, no command"
 # -Long Dictum        : /usr/games/fortune -l
