--- a/debian/plugin.pictures.conf
+++ b/debian/plugin.pictures.conf
@@ -4,5 +4,5 @@
 # For more details see /usr/share/doc/vdr-plugin-pictures/README
 #
 
-# Specify the pciture directory here:
+# Specify the pictures directory here:
 # --dir=/mnt/pictures.MPG
