--- a/debian/reccmds.custom.conf
+++ b/debian/reccmds.custom.conf
@@ -1,6 +1,6 @@
 #
 # This is an example file for defining external commands, that will be 
-# accessable as commands at the recordings list.
+# accessible as commands at the recordings list.
 # The commands will be executed under the same user id that vdr is running 
 # with, so take care if your are running vdr as root!
 # 
@@ -17,7 +17,7 @@
 # will simply show you the recording name :-)
 #
 # If you are using the reccmd-patch, you can even divide your commands into
-# submenus. To do so, preceed all sub menu items with a "-". i.e.:
+# submenus. To do so, prefix all sub menu items with a "-". i.e.:
 # 
 # main menu node ...   : echo "sub menu, no command"
 # -sub menu entry 1    : do_something.sh
